--- a/res/xml/config.xml
+++ b/res/xml/config.xml
@@ -101,6 +101,9 @@
     <feature name="InAppBrowser">
       <param name="android-package" value="org.apache.cordova.InAppBrowser"/>
     </feature>
+	<feature name="StatusBarNotification">
+      <param name="android-package" value="com.phonegap.plugins.statusBarNotification.StatusBarNotification"/>
+    </feature>
     <!-- Deprecated plugins element. Remove in 3.0 -->
     <plugins>
     </plugins>
